--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pytest = "^8.1.1"
-factory-boy = "^3.3.0"
 django = "^5.0.3"
 django-rest-framework = "^0.1.0"
+django-extensions = "^3.2.3"
+factory-boy = "^3.3.0"
 
 
 [build-system]
