--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,20 +2,26 @@
 name = "bookstore"
 version = "0.1.0"
 description = "Bookstore API"
-authors = ["Claudio Ferreira Junior <claudioferreirajr@hotmail.com>"]
-readme = "README.md"
+authors = ["Daniel Santos <drsantos20@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pytest = "^8.1.1"
-django = "^5.0.3"
+python = "^3.7"
+Django = "^3.2.8"
 django-rest-framework = "^0.1.0"
-django-extensions = "^3.2.3"
-factory-boy = "^3.3.0"
-whitenoise = "^6.6.0"
-django-debug-toolbar = "^4.3.0"
+django-extensions = "^3.1.3"
+django-debug-toolbar = "^3.2.2"
+psycopg2-binary = "^2.9.2"
+autopep8 = "^1.6.0"
+flake8 = "^4.0.1"
+isort = "^5.10.1"
+gunicorn = "^20.1.0"
+whitenoise = "^5.3.0"
+gitpython = "^3.1.37"
 
+[tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+factory-boy = "^3.2.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
