--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - app_data:/usr/src/app/
+      - . :/usr/src/app/
     ports:
       - 8000:8000
     env_file:
@@ -25,4 +25,3 @@ services:
 
 volumes:
   postgres_data:
-  app_data:
